--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,10 @@
-@import "tailwindcss";
-/* 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+    font-family: 'Poppins', sans-serif;
+  /* EKLENEN KISIM: */
+    @apply bg-gray-50 text-gray-900 dark:bg-gray-900 dark:text-gray-100;
 }
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
-
-/* body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-} */
